WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189336
[WinCairo][MiniBrowser][WebKit] REGRESSION(
r235398
): ASSERTION FAILED: !m_client.didReceiveTitleForFrame
https://bugs.webkit.org/show_bug.cgi?id=189336
Summary
[WinCairo][MiniBrowser][WebKit] REGRESSION(r235398): ASSERTION FAILED: !m_cli...
Fujii Hironori
Reported
2018-09-06 03:46:29 PDT
[WinCairo][MiniBrowser][WebKit] REGRESSION(
r235398
): ASSERTION FAILED: !m_client.didReceiveTitleForFrame WinCairo MiniBrowser hits RELEASE_ASSERT failure since
r235398
.
> ASSERTION FAILED: !m_client.didReceiveTitleForFrame > c:\webkit\gb\source\webkit\uiprocess\api\c\wkpage.cpp(1050) : WKPageSetPageLoaderClient::LoaderClient::LoaderClient
Attachments
WIP patch
(3.21 KB, patch)
2018-09-06 04:06 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(4.68 KB, patch)
2018-09-06 22:14 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-09-06 04:06:59 PDT
Created
attachment 349016
[details]
WIP patch Umm, there is no WK2 C API to call back the title. Cocoa and glib WK2 API exist.
Alex Christensen
Comment 2
2018-09-06 09:49:44 PDT
Looks good if it works for you. It might be worth adding a PageLoadState::Observer eventually.
Fujii Hironori
Comment 3
2018-09-06 22:14:33 PDT
Created
attachment 349113
[details]
Patch
WebKit Commit Bot
Comment 4
2018-09-07 17:37:25 PDT
Comment on
attachment 349113
[details]
Patch Clearing flags on attachment: 349113 Committed
r235824
: <
https://trac.webkit.org/changeset/235824
>
WebKit Commit Bot
Comment 5
2018-09-07 17:37:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-09-07 17:38:20 PDT
<
rdar://problem/44246092
>
Fujii Hironori
Comment 7
2019-07-16 20:52:58 PDT
(In reply to Alex Christensen from
comment #2
)
> Looks good if it works for you. It might be worth adding a > PageLoadState::Observer eventually.
Filed:
Bug 199848
– [Win][WebKit] Add PageLoadState::Observer C API
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug